examples/errors/parsing/fun_simple-no-eq.cn
fun identity : Int -> Int [pure] {
  n -> n
}

main : () [impure] = ()
